cmake_minimum_required(VERSION 3.23)
project(cStudy C)

set(CMAKE_C_STANDARD 99)

add_executable(cStudy main.c dajiajieshe.c feibonaqishulie.c hanoi.c huiwenzifuchuan.c jiujiuchengfabiao.c maopaopaixu.c shuixianhuashu.c quicksort.c hebingyouxushuzu.c daozhierweishuzu.c leetcode/yiweishuzudongtaihe.c )
